stop video feed from collapsing

--- a/src/camStyles.css
+++ b/src/camStyles.css
@@ -18,7 +18,7 @@
 }
 
 .styles_CameraButtons_mobile_2MRGci9E3394gOq5VCwxVA {
-  background-color: black;
+  background-color: rgba(0,0,0,0.5);
   box-sizing: border-box;
   height: 80px;
   min-height: 80px;
@@ -144,6 +144,7 @@
 }
 
 .styles_Camera__Video_IOqliXwYi27n0wvse5HbM {
+  height: 100%; /*changed*/
   align-items: center;
   box-sizing: border-box;
   display: flex;
@@ -157,6 +158,7 @@
 }
 
 .styles_Camera__Video_IOqliXwYi27n0wvse5HbM video {
+  height: 100%; /*changed*/
   position: absolute;
   visibility: hidden
 }
